Acrescentando página de alerta de formulário enviado

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <div class="container">
         <h1>🌟 Sistema de Pontos Semanal</h1>
 
-        <form name="pontos-mesada" method="POST" data-netlify="true">
+        <form name="pontos-mesada" method="POST" data-netlify="true" action="/obrigado.html">
             <input type="hidden" name="form-name" value="pontos-mesada" />
             <p>
                 <strong>Para: Gabriel</strong><br />
