--- a/index.html
+++ b/index.html
@@ -148,21 +148,6 @@
             width: 60px;
             box-sizing: border-box;
         }
-
-        button {
-            background: #3a6a34;
-            color: white;
-            border: none;
-            padding: 12px 24px;
-            font-size: 16px;
-            border-radius: 4px;
-            cursor: pointer;
-            margin-top: 20px;
-        }
-
-        button:hover {
-            background: #2d5128;
-        }
     </style>
 </head>
 
@@ -170,16 +155,11 @@
     <div class="container">
         <h1>🌟 Sistema de Pontos Semanal</h1>
 
-        <!-- CORREÇÃO: Removido method="POST", adicionado netlify e netlify-honeypot -->
-        <form name="pontos-mesada" netlify netlify-honeypot="bot-field" action="/thanks.html">
-            <!-- Campo honeypot para evitar spam (oculto) -->
-            <p style="display: none;">
-                <label>Don't fill this out if you're human: <input name="bot-field" /></label>
-            </p>
-
-            <input type="hidden" name="form-name" value="pontos-mesada" />
+        <!-- O formulário agora é uma div. O salvamento é automático via JavaScript. -->
+        <div id="pontos-form">
             <p>
-                <strong>Para: Gabriel</strong><br />
+                <strong>Para: Gabriel</strong>
+
                 <strong>Semana começando em:</strong>
                 <input type="text" name="semana" placeholder="Data inicial" />
             </p>
@@ -608,104 +588,156 @@
                 <li>Mesada é paga na segunda-feira</li>
                 <li>Economize para realizar seus sonhos!</li>
             </ol>
-            <button type="submit">Salvar</button>
-        </form>
+        </div>
+    </div>
 
-        <script>
-            function calcularPontos() {
-                const tarefas = [
-                    { name: "cama_", value: 3 },
-                    { name: "quart_", value: 5 },
-                    { name: "louca_", value: 5 },
-                    { name: "lixo_", value: 3 },
-                    { name: "varrer_", value: 4 },
-                    { name: "sapatos_", value: 3 },
-                    { name: "dobrar_", value: 4 },
-                    { name: "banho_", value: 2 },
-                    { name: "escova_", value: 2 },
-                    { name: "licao_", value: 5 },
-                    { name: "mochila_", value: 2 },
-                    { name: "cachorras_", value: 3 },
-                ];
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
 
-                const positivas = [
-                    { name: "ajudar", value: 5 },
-                    { name: "gentil", value: 3 },
-                    { name: "obedecer", value: 3 },
-                    { name: "verdade", value: 5 },
-                ];
+    <script>
+        // Your web app's Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyD0JgGuqonnNw9ng9yhbQBkMnw8gwvb-V4",
+            authDomain: "sistema-de-pontos-semanal.firebaseapp.com",
+            databaseURL: "https://sistema-de-pontos-semanal-default-rtdb.firebaseio.com",
+            projectId: "sistema-de-pontos-semanal",
+            storageBucket: "sistema-de-pontos-semanal.firebasestorage.app",
+            messagingSenderId: "496275393704",
+            appId: "1:496275393704:web:eadec1594b893fd15ec69d"
+        };
 
-                const penalidades = [
-                    { name: "mentir", value: -10 },
-                    { name: "desrespeitar", value: -8 },
-                    { name: "brigar", value: -5 },
-                    { name: "naolic", value: -8 },
-                    { name: "baguncado", value: -5 },
-                    { name: "birra", value: -5 },
-                    { name: "eletronicos", value: -7 },
-                    { name: "no_escova", value: -3 },
-                ];
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        const database = firebase.database();
+        const dataRef = database.ref('formData');
 
-                let totalPontos = 0;
+        let isUpdatingFromFirebase = false; // Flag to prevent feedback loops
 
-                tarefas.forEach((item) => {
-                    ["seg", "ter", "qua", "qui", "sex", "sab", "dom"].forEach((dia) => {
-                        const el = document.querySelector(`input[name="${item.name}${dia}"]`);
-                        if (el && el.checked) totalPontos += item.value;
-                    });
-                });
+        // --- LÓGICA DE CÁLCULO (A MESMA DE ANTES) ---
+        function calcularPontos() {
+            const tarefas = [
+                { name: "cama_", value: 3 }, { name: "quart_", value: 5 }, { name: "louca_", value: 5 },
+                { name: "lixo_", value: 3 }, { name: "varrer_", value: 4 }, { name: "sapatos_", value: 3 },
+                { name: "dobrar_", value: 4 }, { name: "banho_", value: 2 }, { name: "escova_", value: 2 },
+                { name: "licao_", value: 5 }, { name: "mochila_", value: 2 }, { name: "cachorras_", value: 3 },
+            ];
+            const positivas = [
+                { name: "ajudar", value: 5 }, { name: "gentil", value: 3 },
+                { name: "obedecer", value: 3 }, { name: "verdade", value: 5 },
+            ];
+            const penalidades = [
+                { name: "mentir", value: -10 }, { name: "desrespeitar", value: -8 }, { name: "brigar", value: -10 },
+                { name: "naolic", value: -8 }, { name: "baguncado", value: -5 }, { name: "birra", value: -5 },
+                { name: "eletronicos", value: -7 }, { name: "no_escova", value: -3 },
+            ];
 
-                positivas.forEach((item) => {
-                    for (let i = 1; i <= 7; i++) {
-                        const el = document.querySelector(`input[name="${item.name}${i}"]`);
-                        if (el && el.checked) totalPontos += item.value;
-                    }
-                });
+            let totalPontos = 0;
+            const pontosDiarios = { seg: 0, ter: 0, qua: 0, qui: 0, sex: 0, sab: 0, dom: 0 };
 
-                penalidades.forEach((item) => {
-                    for (let i = 1; i <= 7; i++) {
-                        const el = document.querySelector(`input[name="${item.name}${i}"]`);
-                        if (el && el.checked) totalPontos += item.value;
-                    }
-                });
-
-                // Atualiza total geral e pontos da semana
-                document.querySelector('input[name="total_pontos"]').value = totalPontos;
-                document.querySelector('input[name="pontos_semana"]').value = totalPontos;
-
-                // Atualiza pontos diários (somente tarefas diárias)
+            tarefas.forEach((item) => {
                 ["seg", "ter", "qua", "qui", "sex", "sab", "dom"].forEach((dia) => {
-                    let somaDia = 0;
-                    tarefas.forEach((item) => {
-                        const el = document.querySelector(`input[name="${item.name}${dia}"]`);
-                        if (el && el.checked) somaDia += item.value;
-                    });
-                    const campoDia = document.querySelector(`input[name="${dia}_pontos"]`);
-                    if (campoDia) campoDia.value = somaDia;
+                    const el = document.querySelector(`input[name="${item.name}${dia}"]`);
+                    if (el && el.checked) {
+                        totalPontos += item.value;
+                        pontosDiarios[dia] += item.value;
+                    }
                 });
-
-                // Calcula valor da mesada
-                let valor = 0;
-                if (totalPontos >= 50) {
-                    valor = 10 + Math.floor((totalPontos - 50) / 10) * 2;
-                } else if (totalPontos < 30) {
-                    valor = 0;
+            });
+            positivas.forEach((item) => {
+                for (let i = 1; i <= 7; i++) {
+                    const el = document.querySelector(`input[name="${item.name}${i}"]`);
+                    if (el && el.checked) totalPontos += item.value;
                 }
-                document.querySelector('input[name="valor_conquistado"]').value = "€ " + valor.toFixed(2);
+            });
+            penalidades.forEach((item) => {
+                for (let i = 1; i <= 7; i++) {
+                    const el = document.querySelector(`input[name="${item.name}${i}"]`);
+                    if (el && el.checked) totalPontos += item.value;
+                }
+            });
 
-                // Calcula quanto falta para o objetivo de compra
-                const preco = Number(document.querySelector('input[name="preco"]').value) || 0;
-                const ja_tenho = Number(document.querySelector('input[name="ja_tenho"]').value) || 0;
-                const ainda_preciso = preco - ja_tenho;
-                document.querySelector('input[name="ainda_preciso"]').value =
-                    ainda_preciso > 0 ? ainda_preciso.toFixed(2) : "0.00";
+            document.querySelector('input[name="total_pontos"]').value = totalPontos;
+            document.querySelector('input[name="pontos_semana"]').value = totalPontos;
+
+            for (const dia in pontosDiarios) {
+                const campoDia = document.querySelector(`input[name="${dia}_pontos"]`);
+                if (campoDia) campoDia.value = pontosDiarios[dia];
             }
 
-            document.querySelectorAll("input[type=checkbox], input[type=number], input[type=text2]").forEach((el) => {
-                el.addEventListener("change", calcularPontos);
+            let valor = 0;
+            if (totalPontos >= 50) {
+                valor = 10 + Math.floor((totalPontos - 50) / 10) * 2;
+            } else if (totalPontos < 30) {
+                valor = 0;
+            }
+            document.querySelector('input[name="valor_conquistado"]').value = "€ " + valor.toFixed(2);
+
+            const preco = Number(document.querySelector('input[name="preco"]').value) || 0;
+            const ja_tenho = Number(document.querySelector('input[name="ja_tenho"]').value) || 0;
+            const ainda_preciso = preco - ja_tenho;
+            document.querySelector('input[name="ainda_preciso"]').value = ainda_preciso > 0 ? ainda_preciso.toFixed(2) : "0.00";
+        }
+
+        // --- LÓGICA DO FIREBASE ---
+
+        // 1. Função para salvar dados no Firebase
+        function saveDataToFirebase() {
+            if (isUpdatingFromFirebase) return; // Não salva se a atualização veio do Firebase
+
+            const formData = {};
+            document.querySelectorAll('#pontos-form input').forEach(input => {
+                if (input.readOnly) return; // Não salva campos de cálculo (readonly)
+
+                const name = input.name;
+                if (input.type === 'checkbox') {
+                    formData[name] = input.checked;
+                } else {
+                    formData[name] = input.value;
+                }
             });
-        </script>
-    </div>
+            dataRef.set(formData); // 'set' substitui todos os dados.
+        }
+
+        // 2. Função para carregar dados do Firebase e preencher o formulário
+        function loadDataFromFirebase(data) {
+            isUpdatingFromFirebase = true; // Ativa a flag
+            for (const name in data) {
+                const input = document.querySelector(`#pontos-form input[name="${name}"]`);
+                if (input) {
+                    if (input.type === 'checkbox') {
+                        input.checked = data[name];
+                    } else {
+                        input.value = data[name];
+                    }
+                }
+            }
+            isUpdatingFromFirebase = false; // Desativa a flag
+            calcularPontos(); // Roda os cálculos após preencher os dados
+        }
+
+        // 3. Adiciona "listeners" para salvar dados quando o usuário interagir
+        document.querySelectorAll('#pontos-form input').forEach(input => {
+            if (!input.readOnly) {
+                input.addEventListener('change', saveDataToFirebase);
+                if (input.type !== 'checkbox') {
+                    input.addEventListener('keyup', saveDataToFirebase); // Salva enquanto digita
+                }
+            }
+        });
+
+        // 4. "Escuta" por mudanças no Firebase em tempo real
+        dataRef.on('value', (snapshot) => {
+            const data = snapshot.val();
+            if (data) {
+                loadDataFromFirebase(data);
+            } else {
+                // Se não houver dados no Firebase, apenas calcula (formulário em branco)
+                calcularPontos();
+            }
+        });
+
+    </script>
 </body>
 
 </html>
